# particle-life

./: Cargo.toml  Color.h  HSV.cpp  HSV.h  Particles.h  README.md  Universe.cpp  Universe.h
src/: main.rs  params.rs  particles.rs  universe.rs
