[package]
name = "particle-life"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "^0.12"
image = "0.24.0"
rust-hsluv = "0.1.4"
rand = "0.8.4"
rand_distr = "0.4.3"
glam = "0.20.2"
eframe = "0.15.0"
clap = "2.33.3"
